--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,15 +4,17 @@ name: Node.js CI
 
 on:
   pull_request:
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '14.x'
-    - run: npm ci
-    - run: npm test
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "14.x"
+      - run: npm ci
+      - run: npm test
